Bug 268042 - [WebXR] WebGL THREE.js example broken in WebXR
Summary: [WebXR] WebGL THREE.js example broken in WebXR
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebXR (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dan Glastonbury
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-24 16:20 PST by Dan Glastonbury
Modified: 2024-02-05 16:23 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Glastonbury 2024-01-24 16:20:25 PST
Summary:
This demo behaves weirdly in WebXR.

Steps To Reproduce:
1. Enable WebXR in developer settings
2. Go to https://threejs.org/examples/webxr_vr_sandbox.html
3. Enter WebXR

Results:
Whilst you are in WebXR the shapes are cut off based on where you are looking.
Comment 1 Dan Glastonbury 2024-01-24 16:20:35 PST
rdar://117090654
Comment 2 Dan Glastonbury 2024-01-24 17:04:17 PST
Pull request: https://github.com/WebKit/WebKit/pull/23209
Comment 3 EWS 2024-02-05 16:23:22 PST
Committed 274121@main (153d8bbf6437): <https://commits.webkit.org/274121@main>

Reviewed commits have been landed. Closing PR #23209 and removing active labels.