[WebXR] Enable implicit clear for WebXROpaqueFramebuffer https://bugs.webkit.org/show_bug.cgi?id=268042 rdar://117090654

Reviewed by Kimmo Kinnunen.

WebGL's default framebuffer has an implicit clear behavior. The WebXR
specification requires the same behavior for its WebXROpaqueFramebuffer,
therefore WebXR must ensure that it's buffers are always cleared for each rAF of
the session.

Currently we assume content does not do redundant initial clear, as the spec
says the buffer always starts cleared.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::WebXROpaqueFramebuffer::startFrame):
(WebCore::WebXROpaqueFramebuffer::setupFramebuffer):
* Source/WebCore/html/canvas/WebGLRenderingContextBase.h:
* Source/WebCore/html/canvas/WebGLUtilities.h:
(WebCore::ScopedClearColorAndMask::ScopedClearColorAndMask):
(WebCore::ScopedClearColorAndMask::~ScopedClearColorAndMask):
(WebCore::ScopedClearDepthAndMask::ScopedClearDepthAndMask):
(WebCore::ScopedClearDepthAndMask::~ScopedClearDepthAndMask):
(WebCore::ScopedClearStencilAndMask::ScopedClearStencilAndMask):
(WebCore::ScopedClearStencilAndMask::~ScopedClearStencilAndMask):

Canonical link: https://commits.webkit.org/274121@main